--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Rudi Kurniawan",
   "license": "MIT",
   "dependencies": {
+    "argon2": "^0.28.3",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
-    "nodemon": "^2.0.15"
+    "mongoose": "^6.1.6",
+    "nodemon": "^2.0.15",
+    "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
