--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "argon2": "^0.28.3",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
     "zod": "^3.11.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
