--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "license": "MIT",
   "dependencies": {
     "argon2": "^0.28.3",
+    "config": "^3.3.7",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
     "zod": "^3.11.6"
   },
   "devDependencies": {
+    "@types/config": "^0.0.41",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.8",
     "ts-node": "^10.4.0",
