--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "argon2": "^0.28.3",
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@types/config": "^0.0.41",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.178",
